--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,46 +27,46 @@ dependencies:
   flutter_staggered_grid_view: ^0.4.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: ^1.0.4
   get: ^3.26.0
   get_storage: ^1.4.0
   dio: ^3.0.10
-  meta: ^1.1.8
-  connectivity: ^0.4.9+5
-  intl: ^0.16.1
+  meta: ^1.7.0
+  connectivity: ^3.0.6
+  intl: ^0.17.0
   cached_network_image: ^2.5.0
-  flutter_svg: 0.21.0
-  font_awesome_flutter: ^8.11.0
-  pin_code_fields: ^6.1.0
+  flutter_svg: ^0.23.0+1
+  font_awesome_flutter: ^9.2.0
+  pin_code_fields: ^7.3.0
   google_sign_in: ^4.5.9
   flutter_facebook_auth: ^2.0.2+1
-  flutter_picker: ^1.1.5
+  flutter_picker: ^2.0.2
   image_picker: ^0.6.7+12
   permission_handler: 5.0.1+2
-  flutter_video_info: ^1.1.0
+  flutter_video_info: ^1.2.0
   file_picker: ^2.1.7
   textfield_tags: ^1.4.2
-  video_player: ^1.0.1
-  video_thumbnail: ^0.2.5+1
-  pie_chart: 4.0.1
-  mime_type: 0.3.2
-  lazy_load_scrollview: 1.2.0
+  video_player: ^2.2.7
+  video_thumbnail: ^0.4.3
+  pie_chart: ^5.1.0
+  mime_type: ^1.0.0
+  lazy_load_scrollview: ^1.3.0
   percent_indicator: "^2.1.7+2"
-  flutter_rating_bar: 3.2.0+1
-  simple_gesture_detector: ^0.1.4
-  time_range_picker: ^1.1.1
+  flutter_rating_bar: ^4.0.0
+  simple_gesture_detector: ^0.2.0
+  time_range_picker: ^2.1.0
   flutter_local_notifications: ^4.0.1+2
   webview_flutter: ^2.0.8
-  dotted_border: ^2.0.0
-  photo_view: ^0.10.3
-  grouped_list: ^4.0.0
+  dotted_border: ^2.0.0+1
+  photo_view: ^0.13.0
+  grouped_list: ^4.1.0
   queries: ^0.1.15
   flutter_slidable:
-#  fl_chart: ^0.36.3
+  #  fl_chart: ^0.36.3
   package_info_plus:
   firebase_messaging: ^8.0.0-dev.15
   firebase_core:
-  country_picker: ^2.0.7
+  country_picker: ^2.0.9
   country_code_picker: ^2.0.2
   equatable: ^2.0.3
   simple_timer: ^2.0.0
@@ -74,7 +74,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_native_splash: ^1.0.0
+  flutter_native_splash: ^1.3.2
   flutter_launcher_icons: "^0.9.0"
 
 flutter_native_splash:
@@ -94,7 +94,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  #   - images/a_dot_burr.jpeg
+    #   - images/a_dot_burr.jpeg
     - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
