--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,16 @@
   dependencies:
     flutter:
       sdk: flutter
+   # share_plus: ^3.0.4
+    plugin_platform_interface: ^1.0.1
+    flutter_downloader: ^1.7.1
+    path_provider: ^1.6.11
+    http: ^0.12.0+4
+    google_fonts: ^1.1.0
+    share_extend: ^2.0.0
+    share: ^0.6.5+4
 
+    instagram_share: ^0.2.0
     after_layout: ^1.1.0
     inview_notifier_list: ^2.0.0
     flutter_staggered_grid_view: ^0.4.1
